--- a/src/addTagView.fxml
+++ b/src/addTagView.fxml
@@ -36,10 +36,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.36622073578595316" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="484.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/15.0.1">
+<SplitPane dividerPositions="0.36622073578595316" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="484.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="303.0">
          <children>
@@ -57,8 +58,10 @@
                   <Font size="31.0" />
                </font>
             </Label>
-            <Button layoutX="171.0" layoutY="309.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="85.0" text="Lisää" />
-            <Button layoutX="44.0" layoutY="309.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="85.0" text="Peruuta" />
+            <Button layoutX="193.0" layoutY="313.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="86.0" text="Lisää" />
+            <Button layoutX="25.0" layoutY="313.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="85.0" text="Peruuta" />
+            <Button layoutX="186.0" layoutY="77.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="64.0" text="Luo uusi" />
+            <TextField layoutX="25.0" layoutY="78.0" />
          </children></AnchorPane>
   </items>
 </SplitPane>
