--- a/src/application/addTagView.fxml
+++ b/src/application/addTagView.fxml
@@ -60,7 +60,7 @@
             </Label>
             <Button layoutX="193.0" layoutY="313.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="86.0" text="Lisää" />
             <Button layoutX="25.0" layoutY="313.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="85.0" text="Peruuta" />
-            <Button layoutX="186.0" layoutY="77.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="64.0" text="Luo uusi" />
+            <Button layoutX="186.0" layoutY="77.0" mnemonicParsing="false" opacity="0.5" prefHeight="28.0" prefWidth="64.0" text="Luo uusi" />
             <TextField layoutX="25.0" layoutY="78.0" />
          </children></AnchorPane>
   </items>
