--- a/src/application/addTagView.fxml
+++ b/src/application/addTagView.fxml
@@ -1,67 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-  Copyright (c) 2015, 2019, Gluon and/or its affiliates.
-  All rights reserved. Use is subject to license terms.
-
-  This file is available and licensed under the following license:
-
-  Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions
-  are met:
-
-  - Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
-  - Redistributions in binary form must reproduce the above copyright
-    notice, this list of conditions and the following disclaimer in
-    the documentation and/or other materials provided with the distribution.
-  - Neither the name of Oracle Corporation nor the names of its
-    contributors may be used to endorse or promote products derived
-    from this software without specific prior written permission.
-
-  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-  A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-  OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--->
-
-<?import fi.jyu.mit.fxgui.ListChooser?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<SplitPane dividerPositions="0.36622073578595316" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="484.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
-  <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="303.0">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.addTagController">
+   <center>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <ListChooser layoutX="-8.0" layoutY="-1.0" prefHeight="400.0" prefWidth="225.0" rivit="#kissa&#10;#valveuni&#10;#oudotunet&#10;#ex&#10;#kuolema&#10;" />
-         </children></AnchorPane>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-         <children>
-            <Label layoutX="68.0" layoutY="199.0" prefHeight="46.0" prefWidth="37.0" text="0">
-               <font>
-                  <Font size="31.0" />
-               </font>
+            <Label text="Tagin nimi">
+               <HBox.margin>
+                  <Insets left="50.0" />
+               </HBox.margin>
             </Label>
-            <Label layoutX="144.0" layoutY="199.0" text="valittu">
-               <font>
-                  <Font size="31.0" />
-               </font>
-            </Label>
-            <Button layoutX="193.0" layoutY="313.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="86.0" text="Lisää" />
-            <Button layoutX="25.0" layoutY="313.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="85.0" text="Peruuta" />
-            <Button layoutX="186.0" layoutY="77.0" mnemonicParsing="false" opacity="0.5" prefHeight="28.0" prefWidth="64.0" text="Luo uusi" />
-            <TextField layoutX="25.0" layoutY="78.0" />
-         </children></AnchorPane>
-  </items>
-</SplitPane>
+            <TextField fx:id="editTag" text="#Tag">
+               <HBox.margin>
+                  <Insets left="50.0" />
+               </HBox.margin>
+            </TextField>
+            <Button mnemonicParsing="false" onAction="#handlePeruuta" text="Peruuta">
+               <HBox.margin>
+                  <Insets left="50.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#handleLisaa" text="Ok">
+               <HBox.margin>
+                  <Insets left="25.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+         <BorderPane.margin>
+            <Insets top="200.0" />
+         </BorderPane.margin>
+      </HBox>
+   </center>
+   <bottom>
+      <Label fx:id="virhe" BorderPane.alignment="CENTER" />
+   </bottom>
+</BorderPane>
