--- a/src/application/login.fxml
+++ b/src/application/login.fxml
@@ -32,37 +32,75 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import com.gluonhq.charm.glisten.control.TextField?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
-  <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <children>
-        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-          <font>
-            <Font size="18.0" />
-          </font>
-        </Label>
-            <TextField layoutX="304.0" layoutY="156.0" prefHeight="34.0" prefWidth="149.0" />
-            <Button layoutX="304.0" layoutY="204.0" mnemonicParsing="false" text="Luo käyttäjä" />
-            <Button layoutX="384.0" layoutY="204.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="74.0" text="Kirjaudu" />
-            <Text layoutX="185.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kirjaudu" wrappingWidth="118.8896484375">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="loginGUIController">
+   <right>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextField>
+               <VBox.margin>
+                  <Insets top="180.0" />
+               </VBox.margin>
+            </TextField>
+            <PasswordField>
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
+            </PasswordField>
+            <Button fx:id="kirjaudu" mnemonicParsing="false" onAction="#handleKirjaudu" text="Kirjaudu">
+               <VBox.margin>
+                  <Insets left="25.0" top="25.0" />
+               </VBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" text="Luo käyttäjä">
+               <VBox.margin>
+                  <Insets left="15.0" top="10.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+         <BorderPane.margin>
+            <Insets right="150.0" />
+         </BorderPane.margin>
+      </VBox>
+   </right>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Käyttäjänimi">
+               <VBox.margin>
+                  <Insets left="200.0" top="180.0" />
+               </VBox.margin>
                <font>
-                  <Font size="31.0" />
+                  <Font size="23.0" />
                </font>
             </Text>
-            <Text layoutX="170.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unipäiväkirja">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Salasana">
                <font>
-                  <Font size="53.0" />
+                  <Font size="23.0" />
                </font>
+               <VBox.margin>
+                  <Insets left="200.0" top="20.0" />
+               </VBox.margin>
             </Text>
-      </children>
-    </AnchorPane>
-  </children>
-</VBox>
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </VBox>
+   </center>
+   <top>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Unipäiväkirja" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+   </top>
+</BorderPane>
