--- a/src/application/mainView.fxml
+++ b/src/application/mainView.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import fi.jyu.mit.fxgui.ListChooser?>
 <?import fi.jyu.mit.fxgui.RadioButtonChooser?>
-<?import fi.jyu.mit.fxgui.ScrollBorder?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -14,14 +14,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainGUIController" >
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainGUIController">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
+      <MenuBar prefHeight="11.0" prefWidth="738.0" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="Valikko">
             <items>
-                  <MenuItem mnemonicParsing="false" onAction="#handleKirjauduUlos" text="Kirjaudu ulos" />
               <MenuItem mnemonicParsing="false" onAction="#handleLopeta" text="Lopeta..." />
             </items>
           </Menu>
@@ -39,43 +39,33 @@
         </menus>
       </MenuBar>
    </top>
-   <left>
-      <ScrollBorder prefHeight="375.0" prefWidth="125.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label prefHeight="17.0" prefWidth="111.0" text="1.10.22" />
-            <Label layoutX="10.0" layoutY="10.0" prefHeight="17.0" prefWidth="113.0" text="14.1.22" />
-            <Label layoutX="21.0" layoutY="74.0" prefHeight="17.0" prefWidth="103.0" text="13.1.22" />
-         </children>
-      </ScrollBorder>
-   </left>
    <bottom>
-      <HBox prefHeight="100.0" prefWidth="598.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="99.0" prefWidth="595.0" BorderPane.alignment="CENTER">
          <children>
-            <RadioButtonChooser prefHeight="100.0" prefWidth="99.0" rivit="Pvm&#10;Kesto&#10;Laatu&#10;" HBox.hgrow="NEVER">
+            <RadioButtonChooser prefHeight="100.0" prefWidth="99.0" rivit="Kesto&#10;Laatu&#10;" HBox.hgrow="NEVER">
                <HBox.margin>
-                  <Insets />
+                  <Insets top="20.0" />
                </HBox.margin>
             </RadioButtonChooser>
-            <Button mnemonicParsing="false" onAction="#handleJarjesta" text="Järjestä">
-               <HBox.margin>
-                  <Insets top="40.0" />
-               </HBox.margin>
-            </Button>
             <Button mnemonicParsing="false" onAction="#handleLisaaMerkinta" text="Lisää merkintä">
                <HBox.margin>
                   <Insets left="40.0" top="40.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" onAction="#handleHae" text="Hae">
-               <HBox.margin>
-                  <Insets left="40.0" top="40.0" />
-               </HBox.margin>
-            </Button>
-            <TextField promptText="Etsi #Tagilla...">
+            <TextField fx:id="editHaku" promptText="Etsi...">
                <HBox.margin>
                   <Insets left="10.0" top="40.0" />
                </HBox.margin>
             </TextField>
+            <VBox>
+               <HBox.margin>
+                  <Insets left="50.0" top="40.0" />
+               </HBox.margin>
+               <children>
+                  <Label fx:id="editKeskiarvo" prefHeight="18.0" prefWidth="287.0" />
+                  <Label fx:id="editKeskiarvoKaikki" />
+               </children>
+            </VBox>
          </children>
          <BorderPane.margin>
             <Insets />
@@ -83,29 +73,34 @@
       </HBox>
    </bottom>
    <center>
-      <SplitPane dividerPositions="0.7216117216117216" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.7216117216117216" orientation="VERTICAL" prefHeight="200.0" prefWidth="455.0" BorderPane.alignment="CENTER">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="166.0" prefWidth="473.0">
                <children>
-                  <TextArea layoutX="6.0" layoutY="5.0" prefHeight="187.0" prefWidth="320.0" text="Unen kuvaus luetaan .txt tiedostosta..." />
-                  <Label layoutX="386.0" layoutY="14.0" text="13.1.22" />
-                  <Label layoutX="398.0" layoutY="50.0" text="8h" />
-                  <Label layoutX="409.0" layoutY="89.0" text="2" />
+                  <TextArea fx:id="panelUni" layoutX="6.0" layoutY="5.0" prefHeight="187.0" prefWidth="320.0" wrapText="true" />
+                  <Label fx:id="editPaivamaara" layoutX="386.0" layoutY="14.0" />
+                  <Label fx:id="editKesto" layoutX="398.0" layoutY="50.0" />
+                  <Label fx:id="editArvio" layoutX="409.0" layoutY="89.0" />
                   <Label layoutX="340.0" layoutY="14.0" text="Pvm" />
                   <Label layoutX="340.0" layoutY="50.0" text="Kesto" />
                   <Label layoutX="340.0" layoutY="90.0" text="Arvosana" />
+                  <Button layoutX="339.0" layoutY="138.0" mnemonicParsing="false" onAction="#handlePoista" text="Poista" />
+                  <Button layoutX="413.0" layoutY="138.0" mnemonicParsing="false" onAction="#handleMuokkaa" text="Muokkaa" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="102.0" prefWidth="473.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="79.0" prefWidth="488.0">
                <children>
-                  <Label layoutX="42.0" layoutY="23.0" text="#Kissa" />
-                  <Label layoutX="141.0" layoutY="23.0" prefHeight="17.0" prefWidth="67.0" text="#Valveuni" />
-                  <Label layoutX="237.0" layoutY="23.0" prefHeight="17.0" prefWidth="55.0" text="#kuolema" />
-                  <Button layoutX="398.0" layoutY="2.0" mnemonicParsing="false" onAction="#handlePoista" text="Poista" />
-                  <Button layoutX="398.0" layoutY="37.0" mnemonicParsing="false" onAction="#handleLisaaMerkinta" text="Muokkaa" />
+                  <ListChooser fx:id="chooserTagit" layoutX="-4.0" layoutY="-1.0" prefHeight="74.0" prefWidth="251.0" rivit="&#10;&#10;" />
+                  <Button layoutX="258.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleLiitaTag" text="Liitä Tägi" />
+                  <Button layoutX="256.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleLisaaTageja" text="Lisää Tägi" />
+                  <Button layoutX="374.0" layoutY="6.0" mnemonicParsing="false" onAction="#handlePoistaTag" text="Poista" />
+                  <Button layoutX="372.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleMuokkaaTag" text="Muokkaa" />
                </children>
             </AnchorPane>
         </items>
       </SplitPane>
    </center>
+   <left>
+      <ListChooser fx:id="chooserUnet" rivit="14.1.22&#10;13.1.22&#10;1.10.22&#10;" BorderPane.alignment="CENTER" />
+   </left>
 </BorderPane>
